# pytest-apiver

./: .cruft.json  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pytest_apiver/: plugin.py
src/pytest_apiver/_internal/: __init__.py
tests/: test_apiver_marker.py  test_apiver_module_import.py  test_internal.py
tests/fixtures/dummy_pkg/: v1.py
tests/fixtures/dummy_pkg/_v3/: __init__.py  utils.py
tests/fixtures/dummy_pkg/v2/: __init__.py
